samples/_failures_safe/1761695528_89cee0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d35d09f3.c: In function ‘main’:
./samples/SAFE/__tmp_d35d09f3.c:184:18: error: expected ‘)’ at end of input
  184 |         if (fgets
      |            ~     ^
      |                  )
./samples/SAFE/__tmp_d35d09f3.c:184:9: error: expected declaration or statement at end of input
  184 |         if (fgets
      |         ^~
./samples/SAFE/__tmp_d35d09f3.c:184:9: error: expected declaration or statement at end of input
